<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- COMUN -->
    <string name="Categoria">Categoría:</string>
    <string name="Gasto">Gasto:</string>
    <string name="Gastos">Gastos:</string>
    <string name="Saldo">Saldo:</string>
    <string name="Descripcion">Descripción:</string>
    <string name="Ingreso">Ingreso:</string>
    <string name="Ingresos">Ingresos:</string>
    <string name="Guardar">Guardar</string>
    <string name="Importar">Importar</string>
    <string name="Modificar">Modificar</string>
    <string name="Eliminar">Eliminar</string>
    <string name="Cerrar">Cerrar</string>
    <string name="Cancelar">Cancelar</string>
    <string name="MENU_GASTOS">Gasto</string>
    <string name="MENU_INGRESOS">Ingreso</string>
    <string name="MENU_MOVIMIENTOS">Movimientos</string>
    <string name="MENU_INFORMES">Informes</string>
    <string name="MENU_REGISTROS">Registros</string>
    <string name="MENU_OPCIONES">Opciones</string>
    <string name="titulo">Fin de Mes</string>
    <string name="tituloCategoriaIngresos">Categorías de ingresos</string>
    <string name="tituloCategoriaGastos">Categorías de gastos</string>
    <string name="edicionCategoriaGastos">Editar categoría Gasto</string>
    <string name="edicionCategoriaIngresos">Editar categoría Ingreso</string>
    <string name="nuevaCategoriaGastos">Nueva categoría Gasto</string>
    <string name="nuevaCategoriaIngresos">Nueva categoría Ingreso</string>
    <string name="CrearCategoria">Nueva Categoría</string>
    <string name="OPCIONES_FORMATO_MONEDA">Formato de moneda</string>
    <string name="OPCIONES_FORMATO_FECHA">Formato de fecha y hora</string>
    <string name="OPCIONES_BASEDATOS">Base de datos</string>
    <string name="OPCIONES_CONTRASENYA">Contraseña</string>
    <string name="OPCIONES_CALIFICAR">Calificar aplicación</string>
    <string name="OPCIONES_ACERCA_APLICACION">Acerca de la aplicación</string>
    <string name="OPCIONES_FUNCIONES_PRO">Acerca de las funciones PRO</string>
    <string name="OPCIONES_DESARROLLO_CONTACTO">Desarrollo y contacto</string>
    <string name="OPCIONES_AYUDA">Ayuda</string>
    <string name="PERIODICIDAD_REGISTRO_DIARIO">Diario</string>
    <string name="PERIODICIDAD_REGISTRO_SEMANAL">Semanal</string>
    <string name="PERIODICIDAD_REGISTRO_QUINCENAL">Quincenal</string>
    <string name="PERIODICIDAD_REGISTRO_MENSUAL">Mensual</string>
    <string name="PERIODICIDAD_REGISTRO_TRIMESTRAL">Trimestral</string>
    <string name="PERIODICIDAD_REGISTRO_ANUAL">Anual</string>
    <string name="TIPO_FILTRO_INFORME_DIARIO">DIARIO</string>
    <string name="TIPO_FILTRO_INFORME_SEMANAL">SEMANAL</string>
    <string name="TIPO_FILTRO_INFORME_QUINCENAL">QUINCENAL</string>
    <string name="TIPO_FILTRO_INFORME_MENSUAL">MENSUAL</string>
    <string name="TIPO_FILTRO_INFORME_TRIMESTRAL">TRIMESTRAL</string>
    <string name="TIPO_FILTRO_INFORME_ANUAL">ANUAL</string>
    <string name="NUEVO_REGISTRO">Nuevo Registro</string>
    <string name="EDITAR_REGISTRO">Editar Registro</string>
    <string name="MODIFICAR_REGISTRO">Modificar Registro</string>
    <string name="REGISTRO">Registro</string>
    <string name="Periodicidad">Periodicidad:</string>
    <string name="Tipo">Tipo:</string>
    <string name="Valor">Valor:</string>
    <string name="Activo">Activo</string>
    <string name="InActivo">No Activo</string>
    <string name="TIPO_MOVIMIENTO_GASTO">GASTO</string>
    <string name="TIPO_MOVIMIENTO_INGRESO">INGRESO</string>
    <string name="TIPO_FILTRO_RESETEO">TODO</string>
    <string name="AFIRMACION">SI</string>
    <string name="NEGACION">NO</string>
    <string name="AYUDA_CONTRASENYA">Opcionalmente puedes enviarte la contraseña al correo electrónico</string>
    <string name="MAILTO">Correo para</string>
    <string name="CONTRASENYA_AYUDA">Introduce tu contraseña de 4 dígitos</string>
    <string name="AYUDA_BASEDATOS">Realiza un backup de tu base de datos, se guardará en "Storage Card/findemes/DBFinDeMes.db"</string>
    <string name="AYUDA_BASEDATOS_IMPORTACION">Importar Base de datos, se sustituirá la actual por la seleccionada</string>
    <string name="Abandonar">¿Esta seguro de abandonar la aplicación?</string>
    <string name="Confirmar">¿Esta seguro de eliminar?</string>
    <string name="Salir">¿Salir?</string>
    <string name="Asunto">Contraseña app FinDeMes</string>
    <string name="Cuerpo">Esta es tu contraseña para acceder a la app FinDeMes:</string>
    <string name="Enviar">Enviar</string>
    <string name="MovimientoFrecuente">Los movimientos frecuentes no se pueden editar desde Movimientos</string>
    <string name="FechaActivacion">Fecha de Activación:</string>
    <string name="Formato">Selecciona el formato de fecha preferido</string>
    <string name="Formato_Moneda">Selecciona el formato de moneda preferido</string>
    <string name="Numero_Semana">Semana nº</string>
    <string name="Version" translatable="false">1.0.2</string>
    <string name="AcercaDeDescripcion1">Esta es una aplicación desarrollada por Manuel Molero Busto</string>
    <string name="AcercaDeDescripcion2">Las traducciones disponibles son español (castellano),inglés y portugués</string>
    <string name="AcercaDeDescripcion3">Si quieres ayudar con la traducción de la aplicación a otro idioma o mejorar la existente envía un correo a la siguiente dirección:</string>
    <string name="AcercaDeDescripcion4">Este aplicativo ha sido traducido por Jervânio Lima al Portugués</string>
    <string name="AyudaDescripcion1">Aplicación desarrollada para permitir organizar tus gastos e ingresos. Introduce tus movimientos de ingreso o gasto por fecha y obtén tus resultados en lista de movimientos e informes.</string>
    <string name="AyudaDescripcion2">Organizar tus movimientos hoy en día te permite mejorar el control sobre tu dinero.</string>
    <string name="AyudaIngresos">Registra tus movimientos de ingresos y clasificalos. Puedes añadir categorías adicionales.</string>
    <string name="AyudaGastos">Registra tus movimientos de gastos y clasificalos. Puedes añadir categorías adicionales.</string>
    <string name="AyudaMovimientos">Lista de movimientos, gastos e ingresos con filtros adicionales para buscarlos fácilmente.</string>
    <string name="AyudaInformes">Lista de informes, con filtros adicionales para buscarlos fácilmente, posibilidad de graficar los informes.</string>
    <string name="AyudaRegistros">Registros periódicos, que se añaden a la lista de movimientos a partir de la fecha de activación del registro.</string>
    <string name="AyudaOpciones">Crea categorías, ponle una contraseña a tu app o crear copias de tu base de datos entre otras opciones.</string>
    <string name="ConjuncionSemana">al</string>
    <!-- MENSAJES TOAST -->
    <string name="Eliminado">¡Eliminado!</string>
    <string name="No_Eliminado">No se ha podido eliminar</string>
    <string name="Actualizado">¡Actualizado!</string>
    <string name="No_Actualizado">No se ha podido actualizar</string>
    <string name="Modificado">¡Modificado!</string>
    <string name="No_Modificado">No se ha podido modificar</string>
    <string name="Selecciona_categoria">Debe seleccionar una categoría</string>
    <string name="Creado">¡Creado!</string>
    <string name="No_Creado">No se ha podido crear</string>
    <string name="No_Informes">NO HAY INFORMES ACTUALMENTE</string>
    <string name="No_Movimientos">NO HAY MOVIMIENTOS ACTUALMENTE</string>
    <string name="No_Registros">NO HAY REGISTROS ACTUALMENTE</string>
    <string name="OpcionGrafica_Lineal">Gráfica Lineal</string>
    <string name="OpcionGrafica_Barra">Gráfica de Barras</string>
    <!-- VALIDACIONES XML -->
    <string name="Validacion_Contrasenya">Contraseña errónea</string>
    <string name="Validacion_Nombre">Debe incluir el nombre</string>
    <string name="Validacion_Cantidad">Debe incluir la cantidad</string>
    <string name="Validacion_Descripcion">Debe incluir una breve descripción</string>
    <string name="Validacion_PIN">Debe especificar un PIN de 4 digitos</string>
    <string name="Validacion_Correo_destino">Correo destino requerido</string>
    <string name="Validacion_Correo_envio">Envio de correo no válido, revise su configuracion</string>
    <string name="Validacion_Correo_ok">Envio de correo válido</string>
    <!-- grupos de gastos -->
    <string name="Grupo_facturas">Facturas</string>
    <string name="Grupo_alimentacion">Alimentación</string>
    <string name="Grupo_hipoteca">Hipoteca</string>
    <string name="Grupo_alquiler">Alquiler</string>
    <string name="Grupo_automocion">Automoción</string>
    <string name="Grupo_vacaciones">Vacaciones</string>
    <string name="Grupo_familia">Familia</string>
    <string name="Grupo_nomina">Nómina</string>
    <string name="Grupo_prestamo">Préstamo</string>
    <string name="Grupo_ventas">Ventas</string>
    <string name="Grupo_extra">Extra</string>
	
	<string name="Nueva_version_1">** Nuevo Filtro por descripción en lista de movimientos</string>
	<string name="Nueva_version_2">** Calculadora en menú principal</string>
	<string name="Nueva_version_3">** Cambio en el cliente de envío de correos por problemas relacionados</string>
	<string name="Nueva_version_4">** Corregido error de formato decimal</string>
    <string name="Nueva_version_5">** Añadido idioma Portugués de Brasil</string>
    </resources>
