<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white" >
      
    <LinearLayout
        android:id="@+id/lyLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Version"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_dialog_title"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/lyLinear2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin"
        android:layout_below="@+id/lyLinear">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Nueva_version_1"
            android:textStyle="bold"
            android:textSize="@dimen/text_size"
            />
    </LinearLayout>    
	<LinearLayout
        android:id="@+id/lyLinear3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin"
        android:layout_below="@+id/lyLinear2">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Nueva_version_2"
            android:textStyle="bold"
            android:textSize="@dimen/text_size"
            />
    </LinearLayout>
	<LinearLayout
        android:id="@+id/lyLinear4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin"
        android:layout_below="@+id/lyLinear3">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Nueva_version_3"
            android:textStyle="bold"
            android:textSize="@dimen/text_size"
            />
    </LinearLayout>
	<LinearLayout
        android:id="@+id/lyLinear5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin"
        android:layout_below="@+id/lyLinear4">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Nueva_version_4"
            android:textStyle="bold"
            android:textSize="@dimen/text_size"
            />
    </LinearLayout>
</RelativeLayout>
