<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".EditRegistroDialog">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/lyLinear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/EDITAR_REGISTRO"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_weight="1"/>
        <EditText
            android:id="@+id/txtRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="20"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/lyLinear2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/lyLinear1">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Periodicidad"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_weight="1"/>
        <Spinner android:id="@+id/spPeriodicidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/lyLinear3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/lyLinear2">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Tipo"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_weight="1"/>
        <Spinner android:id="@+id/spTipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/lyLinear4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/lyLinear3">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Categoria"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_weight="1"/>
        <Spinner android:id="@+id/spCategoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/lyLinear5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/lyLinear4">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Valor"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_weight="1"/>
        <EditText
            android:id="@+id/txtValor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/lyLinear6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/lyLinear5">
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/rbActivo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Activo"
                />
            <RadioButton
                android:id="@+id/rbInActivo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/InActivo"
                />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/lyLinear7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/lyLinear6">
        <Button
            android:id="@+id/btnModificarRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/MODIFICAR_REGISTRO"
            android:textStyle="bold"
            android:textSize="18sp" />
    </LinearLayout>
</RelativeLayout>
